--- a/admin/assets/css/dashboard.css
+++ b/admin/assets/css/dashboard.css
@@ -481,3 +481,35 @@ ul.sub-menu li a {
 .ptn_box_open {
   display: none;
 }
+
+/* login */
+
+body {
+  background-color: white;
+  color: #ccc;
+}
+
+.form-control {
+  background-color: #f3f3f3;
+  border: none;
+  color: black !important;
+  padding: 20px;
+  color: white;
+}
+
+.form-control:focus {
+  background-color: #f3f3f3;
+  color: black !important;
+
+  box-shadow: none;
+}
+
+.btn-primary {
+  background-color: #b19cd9;
+  border: none;
+  padding: 15px;
+}
+
+.btn-primary:hover {
+  background-color: #9a7dcd;
+}
