--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,7 +214,6 @@ footer {
   transform: translateY(-3px);
 }
 
-
 .footer-subscribe input {
   background-color: white;
   border: 1px solid var(--border-color);
@@ -1905,7 +1904,6 @@ body.lock-scroll {
   .property-preview:nth-of-type(even):after {
     width: 13px;
     height: 13px;
-    background: url("../img/graphics/crop-mark-small.svg") center/100%;
   }
   .google-map {
     height: 200px;
@@ -6999,8 +6997,6 @@ footer {
   position: relative;
 }
 
-
-
 .footer-subscribe button {
   position: absolute;
   right: 8px;
@@ -7128,7 +7124,6 @@ footer {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
 }
 
-
 .arrow-btn {
   width: 36px;
   height: 36px;
@@ -7166,9 +7161,8 @@ body {
 
 /* ammar */
 section.site-banner.site-banner--bg.site-banner--page {
-
   background-size: cover !important;
-  background-position: center  !important;
+  background-position: center !important;
 }
 
 .section-3d {
@@ -7220,10 +7214,6 @@ label.form-label {
   color: black;
 }
 
-img#img3d {
-  width: 50%;
-}
-
 /*  */
 .btn_payment.flex.animate__animated.animate__fadeInUp {
   filter: f;
@@ -7247,4 +7237,85 @@ button.btn_payment.right a {
 
 .btn_payment.flex.animate__animated.animate__fadeInUp a {
   width: 50%;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+body.arabic {
+  font-family: "Cairo", sans-serif;
+  direction: rtl;
+  text-align: right;
+}
+
+.no-rtl {
+  direction: ltr !important;
+  text-align: left !important;
+}
+/*  */
+ul {
+  list-style: none;
+}
+
+.example-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  border-radius: 60px;
+  padding: 20px;
+  height: 70px;
+  margin: 20px;
+  position: fixed;
+  left: 0;
+}
+
+.example-1 .icon-content {
+  margin: 0 10px;
+  position: relative;
+  font-weight: bolder;
+}
+
+.example-1 .icon-content .tooltip {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #fff;
+  color: #000;
+  padding: 6px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  visibility: hidden;
+  font-size: 14px;
+  transition: all 0.3s ease;
+  font-weight: bolder;
+}
+
+.example-1 .icon-content .link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #414a55;
+  transition: all 0.3s ease-in-out;
+  font-weight: bolder;
+}
+
+.example-1 .icon-content .link:hover {
+  box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
+}
+
+.example-1 .icon-content .link svg {
+  width: 30px;
+  height: 30px;
+  fill: #fff;
+}
+
+.property-card-content {
+  color: #718096;
 }
