--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -239,7 +239,9 @@ button.button.button-secondary {
   height: 45vh;
   background-size: cover;
   border-radius: 10px;
-  background: red;
+
+  background-size: cover;
+  
 }
 
 article.card.mt-5 {
